Fixed bottom border of section chevron shape, witch can now freely stretch to size of content.

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -20,23 +20,23 @@ h1{
     font-family: 'Anton', sans-serif;
 }
 
+p{
+    font-size: 34px;
+}
+
 .base{
-    height: 500px;
     background-color: #3f3f3f;
     -webkit-clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
     clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
     padding-top: 100px;
+    position: relative;
+    top: -20px;
 } 
 .base-border{
     background-color: #fff;
     -webkit-clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
     clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
-    width: 100%;
-    height: 520px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+    width: 100%; 
 }
 
 .wrapper{
@@ -51,8 +51,8 @@ h1{
             z-index: 1000;
         }
         .base{
-            padding-top: 55px;
-            
+            height: 550px;
+            padding-top: 80px;
             background-color: #C15339;
         }
     }
@@ -62,7 +62,6 @@ h1{
         }
         .base{
             background-color: #E2A764;
-            
         }
     }
     .row:nth-child(3){
@@ -131,7 +130,7 @@ h1{
 //CLIPPING-PATHS Xd
 .clipping-path{
     position: absolute;
-    height: 800px;
+    height: 773px;
     top: 119px;
     left: 0;
     width: 100%;
