--- a/src/styles.css
+++ b/src/styles.css
@@ -5952,23 +5952,22 @@ h1 {
   font-size: 54px;
   font-family: 'Anton', sans-serif; }
 
+p {
+  font-size: 34px; }
+
 .base {
-  height: 500px;
   background-color: #3f3f3f;
   -webkit-clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
   clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
-  padding-top: 100px; }
+  padding-top: 100px;
+  position: relative;
+  top: -20px; }
 
 .base-border {
   background-color: #fff;
   -webkit-clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
   clip-path: polygon(0 0, 100% 1%, 100% 85%, 50% 100%, 0 85%);
-  width: 100%;
-  height: 520px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1; }
+  width: 100%; }
 
 .wrapper {
   position: relative;
@@ -5978,7 +5977,8 @@ h1 {
   margin-top: 0;
   z-index: 1000; }
 .sections .row:first-child .base {
-  padding-top: 55px;
+  height: 550px;
+  padding-top: 80px;
   background-color: #C15339; }
 .sections .row:nth-child(2) .wrapper {
   z-index: 900; }
@@ -6026,7 +6026,7 @@ h1 {
 
 .clipping-path {
   position: absolute;
-  height: 800px;
+  height: 773px;
   top: 119px;
   left: 0;
   width: 100%;
